@@ -1,4 +1,9 @@
-$Id: Changelog.txt,v 1.29 2011/08/07 16:59:33 nanard Exp $
+$Id: Changelog.txt,v 1.30 2012/08/21 17:24:06 nanard Exp $
+
+2012/08/21:
+  Little change in Makefile
+  removed warnings in testgetgateway.c
+  Fixed bugs in command line argumentparsing in natpmpc.c
 
 2011/08/07:
   Patch to build on debian/kFreeBSD.
